--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <button onclick="cpfGenerator()">CPF</button>
         <button onclick="cnpjGenerator()">CNPJ</button>
         <button onclick="CEPGenerator()">CEP</button>
+        <button onclick="emailGerador()">Email</button>
+        <button onclick="numberGerador()">Telefone</button>
     </div>
     <div class="inputspace">
         <div class="icon" onclick="copyPasteContent()">
