--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <path d="M3 10V16C3 17.6569 4.34315 19 6 19M18 5C18 3.34315 16.6569 2 15 2H11C7.22876 2 5.34315 2 4.17157 3.17157C3.51839 3.82475 3.22937 4.69989 3.10149 6" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round"/>
             </svg>
         </div>
-        <input type="text" id="input-content">
+        <input type="text" id="input-content" disabled>
     </div>
     <footer>Criador: <a href="https://www.linkedin.com/in/jo%C3%A3o-miguel-mendon%C3%A7a-665334187/" target="_blank">Miguel</a></footer>
 </body>
